--- a/apps/t-1/style.css
+++ b/apps/t-1/style.css
@@ -16,7 +16,8 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  align-items: center;
   min-height: 100vh;
 }
 
